additional json refactoring